--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "expo": "^32.0.0",
+    "moment": "^2.24.0",
     "native-base": "^2.12.1",
     "prop-types": "^15.7.2",
     "react": "16.5.0",
